dvn-workshop-kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-nuvem-ingress
annotations:
  alb.ingress.kubernetes.io./load-balancer-name: devops-nuvem-alb
  alb.ingress.kubernetes.io/scheme: internet-facing
  alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
  alb.ingress.kubernetes.io/subnets: "subnet-02b90e0f9f95fa64e,subnet-0696c34dfb5841bea"
spec: 
  ingressClassName: alb
  rules: 
    - http:
        paths:
        - path: /backend
          pathType: Prefix
          backend:
            service:
              name: backend
              port:
                number: 80

        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend
              port:
                number: 80
